--- a/portfolio/templates/portfolio/competencias.html
+++ b/portfolio/templates/portfolio/competencias.html
@@ -3,48 +3,61 @@
 {% block title %}Competências e Aptidões{% endblock %}
 
 {% block main %}
+    <style>
+        /* Estilos adicionais para a página de competências */
+        .competencias-container {
+            background-color: #f8f8f8;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+
+        .competencias-container h1 {
+            color: #333;
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
+        .competencias-container ul {
+            padding: 0;
+            margin: 0;
+            list-style-type: none;
+        }
+
+        .competencias-container li {
+            background-color: #fff;
+            margin-bottom: 20px;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .competencias-container li:hover {
+            transform: translateY(-5px);
+        }
+
+        .competencias-container h3 {
+            margin: 0;
+            color: #333;
+            font-size: 24px;
+        }
+
+        .competencias-container p {
+            margin-top: 10px;
+            color: #666;
+            font-size: 18px;
+        }
+
+        .competencias-container .empty-message {
+            color: #888;
+            font-style: italic;
+            font-size: 20px;
+        }
+    </style>
+
     <div class="container">
-        <style>
-            /* Estilos adicionais para a página de competências */
-            .competencias-container {
-                background-color: #f7f7f7;
-                padding: 30px;
-            }
-
-            .competencias-container h1 {
-                color: #555;
-            }
-
-            .competencias-container ul {
-                padding: 0;
-                margin: 0;
-                list-style-type: none;
-            }
-
-            .competencias-container li {
-                background-color: #ebebeb;
-                margin-bottom: 20px;
-                padding: 20px;
-                border-radius: 4px;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            }
-
-            .competencias-container h3 {
-                margin: 0;
-                color: #333;
-            }
-
-            .competencias-container p {
-                margin-top: 10px;
-                color: #888;
-            }
-
-            .competencias-container .empty-message {
-                color: #888;
-                font-style: italic;
-            }
-        </style>
-
         <div class="competencias-container">
             <h1>Competências e Aptidões</h1>
             <ul>
