--- a/portfolio/templates/portfolio/projetos.html
+++ b/portfolio/templates/portfolio/projetos.html
@@ -61,8 +61,9 @@
         <div class="project">
             <h2>Minesweeper</h2>
             <img src="../../static/portfolio/images/minesweeper.jpg" alt="Minesweeper">
-            <p>Minesweeper meu primeiro jogo, foi um projeto feito na cadeira de fundamentos de Programação.</p>
-            <a href="#" class="view-button">Saiba Mais</a>
+            <p>Minesweeper é um popular jogo de quebra-cabeça baseado em lógica, que desafia os jogadores a revelar células em um campo minado virtual, evitando bombas escondidas.
+                O objetivo principal do jogo é limpar o campo sem detonar nenhuma mina. Os jogadores começam com um tabuleiro cheio de células ocultas, algumas das quais contêm bombas e outras estão vazias. À medida que exploram o tabuleiro, cada célula revelada exibe um número que indica quantas bombas estão adjacentes a ela. Os jogadores devem usar essas informações para determinar a localização das bombas e marcar as células suspeitas com bandeiras.
+                Estratégia, lógica e a capacidade de dedução são essenciais para evitar explosões e completar o tabuleiro com sucesso. Minesweeper é conhecido por seu desafio intelectual e é uma ótima maneira de testar as habilidades de resolução de problemas dos jogadores.</p>
         </div>
 
         <div class="project">
@@ -80,38 +81,37 @@
                 No entanto, se um peão for ultrapassado por um peão da outra família (peão do jogador oponente), fica
                 constipado e tem de voltar para a sua casa mãe.
                 O peão quando remetido em casa mãe deixa de ficar constipado e pode ser usado normalmente.</p>
-            <a href="#" class="view-button">Saiba Mais</a>
         </div>
 
         <div class="project">
             <h2>Deisiflix</h2>
             <img src="../../static/portfolio/images/deisiflix.jpg" alt="Deisiflix">
-            <p>Objetivo: desenvolvimento de uma aplicação em linguagem Java que
-                seja capaz de receber e responder a pedidos de estatísticas sobre uma base de dados de
-                filmes.
+            <p>Durante o meu percurso académico, trabalhei num projeto de desenvolvimento de uma aplicação em Java para análise de estatísticas de filmes.
+                O objetivo era criar uma aplicação capaz de responder a consultas sobre dados de filmes numa base de dados.
+                Desenvolvi funcionalidades que incluíam consultas detalhadas, cálculos estatísticos, geração de relatórios e uma interface amigável.
+                Este projeto proporcionou-me a oportunidade de aplicar conhecimentos em Java e análise de dados,
+                enquanto explorava o mundo do cinema por meio de estatísticas.
             </p>
-            <a href="#" class="view-button">Saiba Mais</a>
         </div>
 
         <div class="project">
             <h2>Deisi Jungle</h2>
             <img src="../../static/portfolio/images/deisijungle.jpg" alt="Deisiflix">
-            <p>Certo dia, numa savana muito (muito) longe daqui, os animais decidiram descobrir quem seria
-                o melhor atleta entre eles. Para o fazer, definiram um conjunto de provas desportivas que iriam
-                disputar entre si - quem vencesse mais provas seria considerado o Rei da Selva. Rapidamente
-                a notícia chegou ao Tarzan, que não quis deixar de participar nas provas, convencido de que
-                facilmente as venceria.
-                A primeira prova a disputar é a prova de atletismo. Os animais vão-se reunir numa pista e
-                competir para determinar qual o melhor atleta.
+            <p>Imagine-se numa savana distante, onde os animais decidiram resolver um mistério antigo: Quem é o atleta supremo da selva? Para resolver essa questão, eles organizaram uma série de competições esportivas. O desafio é claro: quem conquistar a maioria das provas será coroado como o Rei da Selva.
+                No entanto, a notícia dessas competições chega até Tarzan, que não pode resistir a um desafio. Ele está convencido de que pode facilmente vencer todas as competições. A primeira delas é uma corrida de atletismo.
+                Neste emocionante jogo, você assumirá o papel de um dos animais da selva, competindo contra outros em uma pista de atletismo empolgante. Suas habilidades e estratégias serão testadas à medida que você enfrenta uma série de desafios atléticos. Será que você tem o que é preciso para superar a concorrência e se tornar o grande campeão da selva?Imagine-se numa savana distante, onde os animais decidiram resolver um mistério antigo: Quem é o atleta supremo da selva? Para resolver essa questão, eles organizaram uma série de competições esportivas. O desafio é claro: quem conquistar a maioria das provas será coroado como o Rei da Selva.
+                No entanto, a notícia dessas competições chega até Tarzan, que não pode resistir a um desafio. Ele está convencido de que pode facilmente vencer todas as competições. A primeira delas é uma corrida de atletismo.
+                Neste emocionante jogo, você assumirá o papel de um dos animais da selva, competindo contra outros em uma pista de atletismo empolgante. Suas habilidades e estratégias serão testadas à medida que você enfrenta uma série de desafios atléticos. Será que você tem o que é preciso para superar a concorrência e se tornar o grande campeão da selva?
             </p>
-            <a href="#" class="view-button">Saiba Mais</a>
         </div>
 
         <div class="project">
             <h2>Máquina de Lavar Roupa</h2>
             <img src="../../static/portfolio/images/Arquitetura%20de%20computadores.jpg" alt="Deisiflix">
-            <p>Descrição do projeto 2.</p>
-            <a href="#" class="view-button">Saiba Mais</a>
+            <p>Nas aulas de Arquiteturas de Computadores, participei de um projeto empolgante que simulava a automação de uma máquina de lavar roupa. Nesse desafio, nossa tarefa era criar um sistema inteligente capaz de controlar e otimizar todas as etapas do ciclo de lavagem, desde a seleção da carga até o enxágue final.
+                Utilizamos os princípios de arquitetura de computadores para projetar uma unidade central de processamento (CPU) que pudesse receber e interpretar comandos de usuário, ajustar as configurações de lavagem com base nas preferências e nas necessidades da roupa e monitorar o progresso do ciclo em tempo real.
+                Nossa simulação envolveu a criação de uma interface intuitiva para os usuários, permitindo que eles escolhessem entre diferentes programas de lavagem, ajustassem a temperatura da água, definissem o nível de agitação e até mesmo agendasse inícios de lavagem. O sistema era capaz de tomar decisões inteligentes, como ajustar o tempo de lavagem com base na quantidade de roupa carregada e garantir a eficiência energética durante todo o processo.
+                Foi uma experiência valiosa em que aplicamos os conhecimentos de arquitetura de computadores para aprimorar a automação de tarefas diárias, tornando o processo de lavagem de roupas mais conveniente, econômico e eficiente.</p>
         </div>
     </div>
 {% endblock %}
