--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block main %}
-
     <style>
         * {
             box-sizing: border-box;
@@ -14,52 +13,34 @@
         body {
             height: 100%;
             width: 100%;
+            background-color: #f0f0f0;
+        }
+
+        .hero {
+            position: relative;
+            background-image: url('{% static "portfolio/images/port3.jpeg" %}');
             background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center center;
-        }
-
-
-        /* Estilo para a seção hero */
-        @media (max-width: 600px) {
-            .hero {
-                background-image: url('{% static "portfolio/images/port5.jpeg" %}');
-                background-size: cover;
-                background-position: center;
-                height: 600px;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-            }
-        }
-
-        @media (min-width: 601px) {
-            .hero {
-                background-image: url('{% static "portfolio/images/port1.jpeg" %}');
-                background-size: cover;
-                background-position: center;
-                height: 600px;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-            }
+            background-position: center;
+            height: 600px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
         }
 
         .hero h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-            color: black;
+            font-size: 36px;
+            margin-bottom: 10px;
+            color: white;
         }
 
         .hero p {
-            font-size: 50px;
+            font-size: 24px;
+            color: white;
+            max-width: 80%;
         }
 
-        /* Estilo para a seção about */
         .about {
             padding: 50px;
             color: black;
@@ -79,6 +60,7 @@
     </style>
 
     <section class="hero">
+        <div class="parallax-layer"></div>
         <h1>"A tecnologia move o mundo e a humanidade para frente,
             conectando sonhos e possibilidades em uma realidade que nunca poderíamos imaginar."</h1>
     </section>
@@ -96,12 +78,15 @@
                     poderosa
                     para impulsionar o progresso e melhorar a vida das pessoas. Estou animada para compartilhar essa
                     paixão com você!
+                </p>
                 <p>Para saber mais sobre mim, visite <a href="{% url 'portfolio:mais_sobre_mim' %}"
-                                                        style="color:rgb(31, 209, 233);">Minha outra página!</a></p>
+                                                        style="color:rgb(31, 209, 233);">minha outra página!</a></p>
             </section>
+        </article>
+    </section>
 
-            <br>
-            <section id="curso">
+    <section class="about">
+        <article>
                 <p>Desde sempre, a tecnologia despertou em mim uma paixão sem limites e uma curiosidade insaciável
                     sobre
                     como ela funciona e como pode ser usada para transformar o mundo.
@@ -111,8 +96,23 @@
                     usar meu conhecimento para ajudar a tornar o mundo um lugar melhor, mais conectado e mais
                     avançado.
                 </p>
-            </section>
-
         </article>
     </section>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Função para atualizar a posição do parallax
+            function updateParallax() {
+                var scrollTop = window.pageYOffset;
+                var parallaxLayers = document.querySelectorAll('.parallax-layer');
+                parallaxLayers.forEach(function (layer) {
+                    layer.style.transform = 'translateY(' + (scrollTop * 0.5) + 'px)';
+                });
+            }
+
+            // Chame a função ao carregar a página e ao rolar a página
+            window.addEventListener('load', updateParallax);
+            window.addEventListener('scroll', updateParallax);
+        });
+    </script>
 {% endblock main %}
